<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPSMover</string>

    <!-- nav drawer -->
    <string name="navdrawer_open">open</string>
    <string name="navdrawer_close">close</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_fav">My Favourite</string>
    <string name="navdrawer_item_history">History</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help &amp; feedback</string>
    <string name="navdrawer_item_about">About</string>

    <!-- activity -->
    <string name="title_activity_map">GPSMover</string>
    <string name="title_activity_favourite">My Favourite</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>

    <!--Main Activity-->
    <string name="action_settings">Settings</string>
    <string name="action_add_location">Add Favouriate Location</string>
    <string name="action_goto_location">Goto Location</string>
    <string name="action_about">About</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- map -->
    <string name="maps_api_key">AIzaSyDzmXXFAilS6uZBwaMHacDqumfpjMBOkaU</string>
    <string name="map_marker_title">Current Location</string>
    <string name="map_marker_snippet" formatted="false">(%.6f, %.6f)</string>

    <!--Notification-->
    <string name="msg_fake_gps" formatted="false">Location is (%.6f, %.6f)</string>

    <!--Add Location Dialog-->
    <string name="dialog_add_location_title">Add to favorites</string>
    <string name="dialog_add_location_hint">Type name here</string>

    <!--Goto Location Dialog-->
    <string name="dialog_goto_location_title">Go to location</string>
    <string name="dialog_goto_location_hint">latitude, longitude</string>
    <string name="error_format">Error format!</string>

    <!--Fav Location Dialog-->
    <string name="dialog_fav_location_title">Favorites</string>
    <string name="list_item_content" formatted="false">Location: (%.6f, %.6f)</string>

    <!--Settings Activity-->
    <string name="perf_title_gps_settings">GPS SETTINGS</string>
    <string name="perf_title_accuracy">Accuracy</string>
    <string name="perf_summary_accuracy">Set GPS fix accuracy value in meters</string>
    <string name="perf_title_update_interval">Update interval</string>
    <string name="perf_summary_update_interval">Set location update interval in ms</string>
    <string name="perf_title_auto_altitude">Auto altitude</string>
    <string name="perf_summary_auto_altitude">Get altitude by lat/lng using Google</string>
    <string name="perf_title_manual_altitude">Manual altitude</string>
    <string name="perf_summary_manual_altitude">Set GPS fix altitude value in meters</string>
    <string name="perf_title_gps_error">Random GPS error</string>
    <string name="perf_summary_gps_error">Set GPS random error (0.0000001)</string>
</resources>
