<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.unlucky.gpsmover.app.MainActivity" >

    <item android:id="@+id/action_add_location"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_location"/>
    <item android:id="@+id/action_goto_location"
        android:orderInCategory="11"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_goto_location"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/>
</menu>
